# pygcal

./: .services  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
pygcal/: client_secret.json  configs.py  constants.py  main.py  static.py  values.py
src/pygcal/: main.py  static.py
