[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygcal"
version = "0.0.7"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Do stuff with google calendar"
readme = "README.md"
license = "MIT"
keywords=[
    "google",
    "calendar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pygooglehelper",
    "google-api-python-client",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pygcal"
"Bug Tracker" = "https://github.com/veltzer/pygcal/issues"
"Documentation" = "https://veltzer.github.io/pygcal"
"Download" = "https://pypi.org/project/pygcal/"
"Repository" = "https://github.com/veltzer/pygcal"

[project.scripts]
pygcal = "pygcal.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pygcal"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pygcal/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
